--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/HelpyTheme">
-        <activity android:name=".Account"></activity>
+        <activity android:name=".ProposerEnLigne"></activity>
+        <activity android:name=".ProposerDomicile" />
+        <activity android:name=".ListePostes" />
+        <activity android:name=".AideEnLigne" />
+        <activity android:name=".ProposerAide" />
+        <activity android:name=".AideDomicile" />
+        <activity android:name=".BesoinAide" />
+        <activity android:name=".Account" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +25,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateAccount" />
-        <activity android:name=".Select"/>
     </application>
 
 </manifest>
