--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/HelpyTheme">
-        <activity android:name=".ProposerEnLigne"></activity>
+        android:theme="@style/AppTheme">
+
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ProposerEnLigne" />
         <activity android:name=".ProposerDomicile" />
         <activity android:name=".ListePostes" />
         <activity android:name=".AideEnLigne" />
@@ -17,13 +26,8 @@
         <activity android:name=".AideDomicile" />
         <activity android:name=".BesoinAide" />
         <activity android:name=".Account" />
-        <activity android:name=".Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Login"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".CreateAccount" />
     </application>
 
